force-app/main/default/objects/Vacancy__c/Vacancy__c.object-meta.xml
<CustomObject>
    <label>Vacancy</label>
    <nameField>
        <label>Vacancy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vacancies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>