force-app/main/default/objects/Vacancy__c/fields/Available_Vacancies__c.field-meta.xml
<CustomField>
    <fullName>Available_Vacancies__c</fullName>
    <formula>Job_Rasika__r.Number_of_Positions__c  -  Job_Rasika__r.Hired_Applicants__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Vacancies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>