force-app/main/default/objects/Vacancy__c/fields/Hired_Applicants__c.field-meta.xml
<CustomField>
    <fullName>Hired_Applicants__c</fullName>
    <formula>Job_Rasika__r.Hired_Applicants__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hired Applicants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>