force-app/main/default/objects/Vacancy__c/fields/Job_Rasika__c.field-meta.xml
<CustomField>
    <fullName>Job_Rasika__c</fullName>
    <label>Job_Rasika</label>
    <referenceTo>Job_Rasika__c</referenceTo>
    <relationshipLabel>Vacancies</relationshipLabel>
    <relationshipName>Vacancies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>