force-app/main/default/objects/Vacancy__c/fields/Total_Vacancies__c.field-meta.xml
<CustomField>
    <fullName>Total_Vacancies__c</fullName>
    <formula>Job_Rasika__r.Number_of_Positions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Vacancies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>