force-app/main/default/objects/Vacancy__c/fields/Trigger_Time_05__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Time_05__c</fullName>
    <formula>NOW()  - 0.00069</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trigger_Time_05</label>
    <type>DateTime</type>
</CustomField>